app.py fixed reading json

--- a/CSV_loops.ipynb
+++ b/CSV_loops.ipynb
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,6 +1185,7 @@
     "# #rename first so they have the same column names to join on\n",
     "left_merged = pd.merge(all_weekly, track_features,\n",
     "                        how=\"left\", on=[\"Track Name\", \"Artist\"])\n",
+    "del left_merged['URL']\n",
     "\n",
     "\n",
     "left_merged.to_csv('Data/all_weekly_charts/all_weekly_masterfile_features.csv')"
@@ -1192,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1220,12 +1221,12 @@
        "      <th>Track Name</th>\n",
        "      <th>Artist</th>\n",
        "      <th>Streams</th>\n",
-       "      <th>URL</th>\n",
        "      <th>Week</th>\n",
        "      <th>Region</th>\n",
        "      <th>acousticness</th>\n",
        "      <th>danceability</th>\n",
        "      <th>duration_ms</th>\n",
+       "      <th>energy</th>\n",
        "      <th>...</th>\n",
        "      <th>key</th>\n",
        "      <th>liveness</th>\n",
@@ -1246,9 +1247,9 @@
        "      <td>Secreto</td>\n",
        "      <td>Anuel AA</td>\n",
        "      <td>536868</td>\n",
-       "      <td>https://open.spotify.com/track/5W83ErFkO3aKAIS...</td>\n",
        "      <td>2019-03-01</td>\n",
        "      <td>Colombia</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1270,9 +1271,9 @@
        "      <td>Con Calma</td>\n",
        "      <td>Daddy Yankee</td>\n",
        "      <td>481026</td>\n",
-       "      <td>https://open.spotify.com/track/5w9c2J52mkdntKO...</td>\n",
        "      <td>2019-03-01</td>\n",
        "      <td>Colombia</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1294,9 +1295,9 @@
        "      <td>Desconocidos</td>\n",
        "      <td>Mau y Ricky</td>\n",
        "      <td>458081</td>\n",
-       "      <td>https://open.spotify.com/track/0s5DNDV6LAKn2u2...</td>\n",
        "      <td>2019-03-01</td>\n",
        "      <td>Colombia</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1318,12 +1319,12 @@
        "      <td>Adan y Eva</td>\n",
        "      <td>Paulo Londra</td>\n",
        "      <td>455968</td>\n",
-       "      <td>https://open.spotify.com/track/6FyRXC8tJUh863J...</td>\n",
        "      <td>2019-03-01</td>\n",
        "      <td>Colombia</td>\n",
        "      <td>0.323</td>\n",
        "      <td>0.767</td>\n",
        "      <td>258639.0</td>\n",
+       "      <td>0.709</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0676</td>\n",
@@ -1342,9 +1343,9 @@
        "      <td>Pa Olvidarte (feat. Manuel Turizo) - Remix</td>\n",
        "      <td>ChocQuibTown</td>\n",
        "      <td>455536</td>\n",
-       "      <td>https://open.spotify.com/track/2ktoFujjJtantyM...</td>\n",
        "      <td>2019-03-01</td>\n",
        "      <td>Colombia</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1390,9 +1391,9 @@
        "      <td>Little Help</td>\n",
        "      <td>The BossHoss</td>\n",
        "      <td>28802</td>\n",
-       "      <td>https://open.spotify.com/track/3uQp3pxHqAcNTRE...</td>\n",
        "      <td>2019-10-11</td>\n",
        "      <td>Austria</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1414,9 +1415,9 @@
        "      <td>Ozean</td>\n",
        "      <td>AnnenMayKantereit</td>\n",
        "      <td>28716</td>\n",
-       "      <td>https://open.spotify.com/track/7ED8m8m3QJvDCnY...</td>\n",
        "      <td>2019-10-11</td>\n",
        "      <td>Austria</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1438,9 +1439,9 @@
        "      <td>Wow.</td>\n",
        "      <td>Post Malone</td>\n",
        "      <td>28575</td>\n",
-       "      <td>https://open.spotify.com/track/7xQAfvXzm3AkraO...</td>\n",
        "      <td>2019-10-11</td>\n",
        "      <td>Austria</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1462,9 +1463,9 @@
        "      <td>Royal Rumble</td>\n",
        "      <td>Kalazh44</td>\n",
        "      <td>28400</td>\n",
-       "      <td>https://open.spotify.com/track/4Rif4wqdvzy84dh...</td>\n",
        "      <td>2019-10-11</td>\n",
        "      <td>Austria</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1486,9 +1487,9 @@
        "      <td>Casanova</td>\n",
        "      <td>Summer Cem</td>\n",
        "      <td>28369</td>\n",
-       "      <td>https://open.spotify.com/track/0jB0RNZIfaihaDK...</td>\n",
        "      <td>2019-10-11</td>\n",
        "      <td>Austria</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1506,7 +1507,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>148744 rows × 24 columns</p>\n",
+       "<p>148744 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1523,75 +1524,49 @@
        "148742       199                                Royal Rumble   \n",
        "148743       200                                    Casanova   \n",
        "\n",
-       "                   Artist  Streams  \\\n",
-       "0                Anuel AA   536868   \n",
-       "1            Daddy Yankee   481026   \n",
-       "2             Mau y Ricky   458081   \n",
-       "3            Paulo Londra   455968   \n",
-       "4            ChocQuibTown   455536   \n",
-       "...                   ...      ...   \n",
-       "148739       The BossHoss    28802   \n",
-       "148740  AnnenMayKantereit    28716   \n",
-       "148741        Post Malone    28575   \n",
-       "148742           Kalazh44    28400   \n",
-       "148743         Summer Cem    28369   \n",
+       "                   Artist  Streams        Week    Region  acousticness  \\\n",
+       "0                Anuel AA   536868  2019-03-01  Colombia           NaN   \n",
+       "1            Daddy Yankee   481026  2019-03-01  Colombia           NaN   \n",
+       "2             Mau y Ricky   458081  2019-03-01  Colombia           NaN   \n",
+       "3            Paulo Londra   455968  2019-03-01  Colombia         0.323   \n",
+       "4            ChocQuibTown   455536  2019-03-01  Colombia           NaN   \n",
+       "...                   ...      ...         ...       ...           ...   \n",
+       "148739       The BossHoss    28802  2019-10-11   Austria           NaN   \n",
+       "148740  AnnenMayKantereit    28716  2019-10-11   Austria           NaN   \n",
+       "148741        Post Malone    28575  2019-10-11   Austria           NaN   \n",
+       "148742           Kalazh44    28400  2019-10-11   Austria           NaN   \n",
+       "148743         Summer Cem    28369  2019-10-11   Austria           NaN   \n",
        "\n",
-       "                                                      URL        Week  \\\n",
-       "0       https://open.spotify.com/track/5W83ErFkO3aKAIS...  2019-03-01   \n",
-       "1       https://open.spotify.com/track/5w9c2J52mkdntKO...  2019-03-01   \n",
-       "2       https://open.spotify.com/track/0s5DNDV6LAKn2u2...  2019-03-01   \n",
-       "3       https://open.spotify.com/track/6FyRXC8tJUh863J...  2019-03-01   \n",
-       "4       https://open.spotify.com/track/2ktoFujjJtantyM...  2019-03-01   \n",
-       "...                                                   ...         ...   \n",
-       "148739  https://open.spotify.com/track/3uQp3pxHqAcNTRE...  2019-10-11   \n",
-       "148740  https://open.spotify.com/track/7ED8m8m3QJvDCnY...  2019-10-11   \n",
-       "148741  https://open.spotify.com/track/7xQAfvXzm3AkraO...  2019-10-11   \n",
-       "148742  https://open.spotify.com/track/4Rif4wqdvzy84dh...  2019-10-11   \n",
-       "148743  https://open.spotify.com/track/0jB0RNZIfaihaDK...  2019-10-11   \n",
+       "        danceability  duration_ms  energy  ...  key liveness  loudness  mode  \\\n",
+       "0                NaN          NaN     NaN  ...  NaN      NaN       NaN   NaN   \n",
+       "1                NaN          NaN     NaN  ...  NaN      NaN       NaN   NaN   \n",
+       "2                NaN          NaN     NaN  ...  NaN      NaN       NaN   NaN   \n",
+       "3              0.767     258639.0   0.709  ...  1.0   0.0676     -4.47   1.0   \n",
+       "4                NaN          NaN     NaN  ...  NaN      NaN       NaN   NaN   \n",
+       "...              ...          ...     ...  ...  ...      ...       ...   ...   \n",
+       "148739           NaN          NaN     NaN  ...  NaN      NaN       NaN   NaN   \n",
+       "148740           NaN          NaN     NaN  ...  NaN      NaN       NaN   NaN   \n",
+       "148741           NaN          NaN     NaN  ...  NaN      NaN       NaN   NaN   \n",
+       "148742           NaN          NaN     NaN  ...  NaN      NaN       NaN   NaN   \n",
+       "148743           NaN          NaN     NaN  ...  NaN      NaN       NaN   NaN   \n",
        "\n",
-       "          Region  acousticness  danceability  duration_ms  ...  key  liveness  \\\n",
-       "0       Colombia           NaN           NaN          NaN  ...  NaN       NaN   \n",
-       "1       Colombia           NaN           NaN          NaN  ...  NaN       NaN   \n",
-       "2       Colombia           NaN           NaN          NaN  ...  NaN       NaN   \n",
-       "3       Colombia         0.323         0.767     258639.0  ...  1.0    0.0676   \n",
-       "4       Colombia           NaN           NaN          NaN  ...  NaN       NaN   \n",
-       "...          ...           ...           ...          ...  ...  ...       ...   \n",
-       "148739   Austria           NaN           NaN          NaN  ...  NaN       NaN   \n",
-       "148740   Austria           NaN           NaN          NaN  ...  NaN       NaN   \n",
-       "148741   Austria           NaN           NaN          NaN  ...  NaN       NaN   \n",
-       "148742   Austria           NaN           NaN          NaN  ...  NaN       NaN   \n",
-       "148743   Austria           NaN           NaN          NaN  ...  NaN       NaN   \n",
+       "        popularity  release_date  speechiness    tempo valence    year  \n",
+       "0              NaN           NaN          NaN      NaN     NaN     NaN  \n",
+       "1              NaN           NaN          NaN      NaN     NaN     NaN  \n",
+       "2              NaN           NaN          NaN      NaN     NaN     NaN  \n",
+       "3             76.0    2018-11-05        0.336  171.993    0.72  2018.0  \n",
+       "4              NaN           NaN          NaN      NaN     NaN     NaN  \n",
+       "...            ...           ...          ...      ...     ...     ...  \n",
+       "148739         NaN           NaN          NaN      NaN     NaN     NaN  \n",
+       "148740         NaN           NaN          NaN      NaN     NaN     NaN  \n",
+       "148741         NaN           NaN          NaN      NaN     NaN     NaN  \n",
+       "148742         NaN           NaN          NaN      NaN     NaN     NaN  \n",
+       "148743         NaN           NaN          NaN      NaN     NaN     NaN  \n",
        "\n",
-       "       loudness  mode  popularity  release_date  speechiness    tempo  \\\n",
-       "0           NaN   NaN         NaN           NaN          NaN      NaN   \n",
-       "1           NaN   NaN         NaN           NaN          NaN      NaN   \n",
-       "2           NaN   NaN         NaN           NaN          NaN      NaN   \n",
-       "3         -4.47   1.0        76.0    2018-11-05        0.336  171.993   \n",
-       "4           NaN   NaN         NaN           NaN          NaN      NaN   \n",
-       "...         ...   ...         ...           ...          ...      ...   \n",
-       "148739      NaN   NaN         NaN           NaN          NaN      NaN   \n",
-       "148740      NaN   NaN         NaN           NaN          NaN      NaN   \n",
-       "148741      NaN   NaN         NaN           NaN          NaN      NaN   \n",
-       "148742      NaN   NaN         NaN           NaN          NaN      NaN   \n",
-       "148743      NaN   NaN         NaN           NaN          NaN      NaN   \n",
-       "\n",
-       "        valence    year  \n",
-       "0           NaN     NaN  \n",
-       "1           NaN     NaN  \n",
-       "2           NaN     NaN  \n",
-       "3          0.72  2018.0  \n",
-       "4           NaN     NaN  \n",
-       "...         ...     ...  \n",
-       "148739      NaN     NaN  \n",
-       "148740      NaN     NaN  \n",
-       "148741      NaN     NaN  \n",
-       "148742      NaN     NaN  \n",
-       "148743      NaN     NaN  \n",
-       "\n",
-       "[148744 rows x 24 columns]"
+       "[148744 rows x 23 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
