edit master csv

--- a/CSV_cleaning.ipynb
+++ b/CSV_cleaning.ipynb
@@ -817,13 +817,425 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Streams</th>\n",
+       "      <th>Track Name</th>\n",
+       "      <th>Artist</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>top genre</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>speechiness</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Region</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Argentina</th>\n",
+       "      <td>6130355393</td>\n",
+       "      <td>12960</td>\n",
+       "      <td>12960</td>\n",
+       "      <td>0.313061</td>\n",
+       "      <td>0.690350</td>\n",
+       "      <td>217643.260886</td>\n",
+       "      <td>0.563346</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>latin</td>\n",
+       "      <td>0.181317</td>\n",
+       "      <td>0.030665</td>\n",
+       "      <td>-7.183961</td>\n",
+       "      <td>0.581977</td>\n",
+       "      <td>76.123817</td>\n",
+       "      <td>0.499810</td>\n",
+       "      <td>118.541768</td>\n",
+       "      <td>0.118844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Austria</th>\n",
+       "      <td>951839187</td>\n",
+       "      <td>13887</td>\n",
+       "      <td>13887</td>\n",
+       "      <td>0.378937</td>\n",
+       "      <td>0.624639</td>\n",
+       "      <td>196711.429541</td>\n",
+       "      <td>0.558655</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>pop</td>\n",
+       "      <td>0.172286</td>\n",
+       "      <td>0.013874</td>\n",
+       "      <td>-7.145170</td>\n",
+       "      <td>0.693014</td>\n",
+       "      <td>71.165669</td>\n",
+       "      <td>0.512023</td>\n",
+       "      <td>124.315294</td>\n",
+       "      <td>0.090488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Belgium</th>\n",
+       "      <td>1488201124</td>\n",
+       "      <td>14871</td>\n",
+       "      <td>14871</td>\n",
+       "      <td>0.357553</td>\n",
+       "      <td>0.627807</td>\n",
+       "      <td>202691.930496</td>\n",
+       "      <td>0.567707</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>pop</td>\n",
+       "      <td>0.177275</td>\n",
+       "      <td>0.022677</td>\n",
+       "      <td>-7.093926</td>\n",
+       "      <td>0.660964</td>\n",
+       "      <td>72.953664</td>\n",
+       "      <td>0.498665</td>\n",
+       "      <td>122.085296</td>\n",
+       "      <td>0.092014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bolivia</th>\n",
+       "      <td>387999918</td>\n",
+       "      <td>13748</td>\n",
+       "      <td>13748</td>\n",
+       "      <td>0.324196</td>\n",
+       "      <td>0.685043</td>\n",
+       "      <td>214988.064792</td>\n",
+       "      <td>0.576068</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>latin</td>\n",
+       "      <td>0.154247</td>\n",
+       "      <td>0.021164</td>\n",
+       "      <td>-6.813429</td>\n",
+       "      <td>0.603253</td>\n",
+       "      <td>74.666115</td>\n",
+       "      <td>0.530711</td>\n",
+       "      <td>123.149118</td>\n",
+       "      <td>0.107965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Brazil</th>\n",
+       "      <td>12737714153</td>\n",
+       "      <td>11924</td>\n",
+       "      <td>11924</td>\n",
+       "      <td>0.360408</td>\n",
+       "      <td>0.665612</td>\n",
+       "      <td>209658.179820</td>\n",
+       "      <td>0.532604</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>pop</td>\n",
+       "      <td>0.171495</td>\n",
+       "      <td>0.028308</td>\n",
+       "      <td>-7.101188</td>\n",
+       "      <td>0.548478</td>\n",
+       "      <td>80.701804</td>\n",
+       "      <td>0.493568</td>\n",
+       "      <td>121.730189</td>\n",
+       "      <td>0.113667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bulgaria</th>\n",
+       "      <td>108135054</td>\n",
+       "      <td>13966</td>\n",
+       "      <td>13966</td>\n",
+       "      <td>0.317271</td>\n",
+       "      <td>0.664992</td>\n",
+       "      <td>198517.720876</td>\n",
+       "      <td>0.573567</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>pop</td>\n",
+       "      <td>0.180641</td>\n",
+       "      <td>0.019306</td>\n",
+       "      <td>-6.934922</td>\n",
+       "      <td>0.597853</td>\n",
+       "      <td>75.243580</td>\n",
+       "      <td>0.477704</td>\n",
+       "      <td>123.775595</td>\n",
+       "      <td>0.113537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Canada</th>\n",
+       "      <td>7729077937</td>\n",
+       "      <td>16054</td>\n",
+       "      <td>16054</td>\n",
+       "      <td>0.338650</td>\n",
+       "      <td>0.648176</td>\n",
+       "      <td>196418.507109</td>\n",
+       "      <td>0.567999</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>adult standards</td>\n",
+       "      <td>0.174302</td>\n",
+       "      <td>0.013583</td>\n",
+       "      <td>-7.225650</td>\n",
+       "      <td>0.664967</td>\n",
+       "      <td>71.630846</td>\n",
+       "      <td>0.501075</td>\n",
+       "      <td>122.413495</td>\n",
+       "      <td>0.104291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chile</th>\n",
+       "      <td>6498091753</td>\n",
+       "      <td>13147</td>\n",
+       "      <td>13147</td>\n",
+       "      <td>0.283386</td>\n",
+       "      <td>0.705830</td>\n",
+       "      <td>213936.906534</td>\n",
+       "      <td>0.598036</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>latin</td>\n",
+       "      <td>0.164672</td>\n",
+       "      <td>0.031072</td>\n",
+       "      <td>-6.773036</td>\n",
+       "      <td>0.524881</td>\n",
+       "      <td>76.570316</td>\n",
+       "      <td>0.489878</td>\n",
+       "      <td>122.865965</td>\n",
+       "      <td>0.138521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Colombia</th>\n",
+       "      <td>1930853993</td>\n",
+       "      <td>13809</td>\n",
+       "      <td>13809</td>\n",
+       "      <td>0.328472</td>\n",
+       "      <td>0.700891</td>\n",
+       "      <td>217142.142581</td>\n",
+       "      <td>0.590761</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>latin</td>\n",
+       "      <td>0.149019</td>\n",
+       "      <td>0.018649</td>\n",
+       "      <td>-6.568280</td>\n",
+       "      <td>0.623001</td>\n",
+       "      <td>75.772201</td>\n",
+       "      <td>0.569929</td>\n",
+       "      <td>120.377806</td>\n",
+       "      <td>0.106459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Global</th>\n",
+       "      <td>176933889409</td>\n",
+       "      <td>16495</td>\n",
+       "      <td>16495</td>\n",
+       "      <td>0.356845</td>\n",
+       "      <td>0.652789</td>\n",
+       "      <td>198062.355845</td>\n",
+       "      <td>0.558971</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>latin</td>\n",
+       "      <td>0.174858</td>\n",
+       "      <td>0.015629</td>\n",
+       "      <td>-7.156058</td>\n",
+       "      <td>0.645298</td>\n",
+       "      <td>72.937721</td>\n",
+       "      <td>0.496067</td>\n",
+       "      <td>121.473152</td>\n",
+       "      <td>0.104756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Great Britain</th>\n",
+       "      <td>14374858089</td>\n",
+       "      <td>15282</td>\n",
+       "      <td>15282</td>\n",
+       "      <td>0.346519</td>\n",
+       "      <td>0.620980</td>\n",
+       "      <td>203695.829900</td>\n",
+       "      <td>0.583071</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>pop</td>\n",
+       "      <td>0.173902</td>\n",
+       "      <td>0.014486</td>\n",
+       "      <td>-7.233816</td>\n",
+       "      <td>0.695937</td>\n",
+       "      <td>70.498561</td>\n",
+       "      <td>0.517485</td>\n",
+       "      <td>121.967447</td>\n",
+       "      <td>0.085437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Switzerland</th>\n",
+       "      <td>1326043729</td>\n",
+       "      <td>15208</td>\n",
+       "      <td>15208</td>\n",
+       "      <td>0.374261</td>\n",
+       "      <td>0.634797</td>\n",
+       "      <td>197590.259356</td>\n",
+       "      <td>0.555194</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>pop</td>\n",
+       "      <td>0.178081</td>\n",
+       "      <td>0.020585</td>\n",
+       "      <td>-7.108048</td>\n",
+       "      <td>0.664488</td>\n",
+       "      <td>71.888707</td>\n",
+       "      <td>0.502284</td>\n",
+       "      <td>123.608942</td>\n",
+       "      <td>0.090061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>United States of America</th>\n",
+       "      <td>51178561584</td>\n",
+       "      <td>15780</td>\n",
+       "      <td>15780</td>\n",
+       "      <td>0.336007</td>\n",
+       "      <td>0.665130</td>\n",
+       "      <td>192384.063579</td>\n",
+       "      <td>0.560771</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>adult standards</td>\n",
+       "      <td>0.168922</td>\n",
+       "      <td>0.014190</td>\n",
+       "      <td>-7.251565</td>\n",
+       "      <td>0.639752</td>\n",
+       "      <td>72.307434</td>\n",
+       "      <td>0.483160</td>\n",
+       "      <td>123.267644</td>\n",
+       "      <td>0.119984</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Streams  Track Name  Artist  acousticness  \\\n",
+       "Region                                                                     \n",
+       "Argentina                   6130355393       12960   12960      0.313061   \n",
+       "Austria                      951839187       13887   13887      0.378937   \n",
+       "Belgium                     1488201124       14871   14871      0.357553   \n",
+       "Bolivia                      387999918       13748   13748      0.324196   \n",
+       "Brazil                     12737714153       11924   11924      0.360408   \n",
+       "Bulgaria                     108135054       13966   13966      0.317271   \n",
+       "Canada                      7729077937       16054   16054      0.338650   \n",
+       "Chile                       6498091753       13147   13147      0.283386   \n",
+       "Colombia                    1930853993       13809   13809      0.328472   \n",
+       "Global                    176933889409       16495   16495      0.356845   \n",
+       "Great Britain              14374858089       15282   15282      0.346519   \n",
+       "Switzerland                 1326043729       15208   15208      0.374261   \n",
+       "United States of America   51178561584       15780   15780      0.336007   \n",
+       "\n",
+       "                          danceability    duration_ms    energy  key  \\\n",
+       "Region                                                                 \n",
+       "Argentina                     0.690350  217643.260886  0.563346  7.0   \n",
+       "Austria                       0.624639  196711.429541  0.558655  1.0   \n",
+       "Belgium                       0.627807  202691.930496  0.567707  1.0   \n",
+       "Bolivia                       0.685043  214988.064792  0.576068  1.0   \n",
+       "Brazil                        0.665612  209658.179820  0.532604  1.0   \n",
+       "Bulgaria                      0.664992  198517.720876  0.573567  1.0   \n",
+       "Canada                        0.648176  196418.507109  0.567999  1.0   \n",
+       "Chile                         0.705830  213936.906534  0.598036  1.0   \n",
+       "Colombia                      0.700891  217142.142581  0.590761  1.0   \n",
+       "Global                        0.652789  198062.355845  0.558971  1.0   \n",
+       "Great Britain                 0.620980  203695.829900  0.583071  1.0   \n",
+       "Switzerland                   0.634797  197590.259356  0.555194  1.0   \n",
+       "United States of America      0.665130  192384.063579  0.560771  1.0   \n",
+       "\n",
+       "                                top genre  liveness  instrumentalness  \\\n",
+       "Region                                                                  \n",
+       "Argentina                           latin  0.181317          0.030665   \n",
+       "Austria                               pop  0.172286          0.013874   \n",
+       "Belgium                               pop  0.177275          0.022677   \n",
+       "Bolivia                             latin  0.154247          0.021164   \n",
+       "Brazil                                pop  0.171495          0.028308   \n",
+       "Bulgaria                              pop  0.180641          0.019306   \n",
+       "Canada                    adult standards  0.174302          0.013583   \n",
+       "Chile                               latin  0.164672          0.031072   \n",
+       "Colombia                            latin  0.149019          0.018649   \n",
+       "Global                              latin  0.174858          0.015629   \n",
+       "Great Britain                         pop  0.173902          0.014486   \n",
+       "Switzerland                           pop  0.178081          0.020585   \n",
+       "United States of America  adult standards  0.168922          0.014190   \n",
+       "\n",
+       "                          loudness      mode  popularity   valence  \\\n",
+       "Region                                                               \n",
+       "Argentina                -7.183961  0.581977   76.123817  0.499810   \n",
+       "Austria                  -7.145170  0.693014   71.165669  0.512023   \n",
+       "Belgium                  -7.093926  0.660964   72.953664  0.498665   \n",
+       "Bolivia                  -6.813429  0.603253   74.666115  0.530711   \n",
+       "Brazil                   -7.101188  0.548478   80.701804  0.493568   \n",
+       "Bulgaria                 -6.934922  0.597853   75.243580  0.477704   \n",
+       "Canada                   -7.225650  0.664967   71.630846  0.501075   \n",
+       "Chile                    -6.773036  0.524881   76.570316  0.489878   \n",
+       "Colombia                 -6.568280  0.623001   75.772201  0.569929   \n",
+       "Global                   -7.156058  0.645298   72.937721  0.496067   \n",
+       "Great Britain            -7.233816  0.695937   70.498561  0.517485   \n",
+       "Switzerland              -7.108048  0.664488   71.888707  0.502284   \n",
+       "United States of America -7.251565  0.639752   72.307434  0.483160   \n",
+       "\n",
+       "                               tempo  speechiness  \n",
+       "Region                                             \n",
+       "Argentina                 118.541768     0.118844  \n",
+       "Austria                   124.315294     0.090488  \n",
+       "Belgium                   122.085296     0.092014  \n",
+       "Bolivia                   123.149118     0.107965  \n",
+       "Brazil                    121.730189     0.113667  \n",
+       "Bulgaria                  123.775595     0.113537  \n",
+       "Canada                    122.413495     0.104291  \n",
+       "Chile                     122.865965     0.138521  \n",
+       "Colombia                  120.377806     0.106459  \n",
+       "Global                    121.473152     0.104756  \n",
+       "Great Britain             121.967447     0.085437  \n",
+       "Switzerland               123.608942     0.090061  \n",
+       "United States of America  123.267644     0.119984  "
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "region_groups = left_merged.groupby('Region').agg({\n",
+    "region_groups = all_merged.groupby('Region').agg({\n",
     "    'Streams' : 'sum',\n",
     "    'Track Name' : 'count',\n",
     "    'Artist' : 'count',\n",
@@ -832,6 +1244,7 @@
     "    'duration_ms' : 'mean',\n",
     "    'energy' : 'mean',\n",
     "    'key' : lambda x : x.value_counts().index[0],\n",
+    "    'top genre': lambda x : x.value_counts().index[0],\n",
     "    'liveness' : 'mean',\n",
     "    'instrumentalness' : 'mean',\n",
     "    'loudness' : 'mean',\n",
@@ -847,7 +1260,7 @@
     "    \n",
     "})\n",
     "\n",
-    "# region_groups.to_csv('Data/all_weekly_charts/group_all_regions_masterfile.csv')\n",
+    "region_groups.to_csv('Data/all_weekly_charts/group_all_regions_masterfile.csv')\n",
     "\n",
     "region_groups\n"
    ]
@@ -858,8 +1271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "left_merged.groupby('Region').agg({'key' : lambda x : x.value_counts().index[0]})\n",
-    "\n"
+    "left_merged.groupby('Region').agg({'key' : lambda x : x.value_counts().index[0]})\n"
    ]
   },
   {
