--- a/CSV_cleaning.ipynb
+++ b/CSV_cleaning.ipynb
@@ -461,21 +461,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UTF-8\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 101,
    "metadata": {},
    "outputs": [
@@ -794,7 +779,6 @@
     }
    ],
    "source": [
-    "\n",
     "allgenre = pd.read_csv('Data/genre_by_country/top50country3.csv')\n",
     "\n",
     "\n",
@@ -817,9 +801,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 122,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1229,7 +1213,7 @@
        "United States of America  123.267644     0.119984  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1267,22 +1251,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
-    "left_merged.groupby('Region').agg({'key' : lambda x : x.value_counts().index[0]})\n"
+    "regions_group = pd.read_csv('Data/all_weekly_charts/all_weekly_masterfile_features.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Streams</th>\n",
+       "      <th>Track Name</th>\n",
+       "      <th>Artist</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>top genre</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>speechiness</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Region</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Argentina</th>\n",
+       "      <td>6130355393</td>\n",
+       "      <td>12960</td>\n",
+       "      <td>12960</td>\n",
+       "      <td>0.313061</td>\n",
+       "      <td>0.69035</td>\n",
+       "      <td>217643.260886</td>\n",
+       "      <td>0.563346</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>latin</td>\n",
+       "      <td>0.181317</td>\n",
+       "      <td>0.030665</td>\n",
+       "      <td>-7.183961</td>\n",
+       "      <td>0.581977</td>\n",
+       "      <td>76.123817</td>\n",
+       "      <td>0.49981</td>\n",
+       "      <td>118.541768</td>\n",
+       "      <td>0.118844</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Streams  Track Name  Artist  acousticness  danceability  \\\n",
+       "Region                                                                  \n",
+       "Argentina  6130355393       12960   12960      0.313061       0.69035   \n",
+       "\n",
+       "             duration_ms    energy  key top genre  liveness  instrumentalness  \\\n",
+       "Region                                                                          \n",
+       "Argentina  217643.260886  0.563346  7.0     latin  0.181317          0.030665   \n",
+       "\n",
+       "           loudness      mode  popularity  valence       tempo  speechiness  \n",
+       "Region                                                                       \n",
+       "Argentina -7.183961  0.581977   76.123817  0.49981  118.541768     0.118844  "
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "argentina =  left_merged.loc[left_merged[\"Region\"] == 'Argentina']\n",
+    "df_merge = pd.read_csv('Data/all_weekly_charts/all_weekly_masterfile_features.csv')\n",
     "\n",
-    "argentina_group= argentina.groupby('Region').agg({\n",
+    "argentina =  df_merge.loc[df_merge[\"Region\"] == 'Argentina']\n",
+    "\n",
+    "\n",
+    "argentina = argentina.groupby('Region').agg({\n",
     "    'Streams' : 'sum',\n",
     "    'Track Name' : 'count',\n",
     "    'Artist' : 'count',\n",
@@ -1290,7 +1381,8 @@
     "    'danceability' : 'mean',\n",
     "    'duration_ms' : 'mean',\n",
     "    'energy' : 'mean',\n",
-    "    'key' : 'count',\n",
+    "    'key' : lambda x : x.value_counts().index[0],\n",
+    "    'top genre': lambda x : x.value_counts().index[0],\n",
     "    'liveness' : 'mean',\n",
     "    'instrumentalness' : 'mean',\n",
     "    'loudness' : 'mean',\n",
@@ -1306,20 +1398,23 @@
     "    \n",
     "})\n",
     "\n",
-    "argentina_group"
+    "argentina"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "regions_group = pd.read_csv('Data/all_weekly_charts/all_weekly_masterfile_features.csv')\n",
+    "\n",
     "from sqlalchemy import create_engine\n",
     "\n",
     "engine = create_engine('sqlite:///weekly_charts.sqlite', echo=False)\n",
     "\n",
-    "left_merged.to_sql('all_weekly_charts_features', con=engine)\n"
+    "regions_group.to_sql('all_weekly_charts_features', con=engine)\n"
    ]
   },
   {
